mealie/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  serviceName: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mealie
    spec:
      containers:
        - env:
            - name: ALLOW_SIGNUP
              value: "false"
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: "Europe/Amsterdam"
            - name: BASE_URL
              value: "http://mealie.frum.com"
          image: ghcr.io/mealie-recipes/mealie:v2.6.0
          imagePullPolicy: IfNotPresent
          name: mealie
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /app/data
              name: data
          ports:
            - containerPort: 9000
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        creationTimestamp: null
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
        volumeMode: Filesystem
