mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mealie
  name: mealie
spec:
  ports:
    - name: http
      nodePort: 30091
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/name: mealie
  type: NodePort
